      ought to be able to use gnome-session D-BUS calls or similar for this
      work (LP: #357101).
  * Use gksudo --preserve-env / sudo -E so that we can check DESKTOP_SESSION
    from the GTK frontend, and use other desktop environment variables in
    future.
  * Try a couple of different locations for NetworkManager's init script
    (LP: #356813).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 08 Apr 2009 14:41:13 +0100

ubiquity (1.12.5) jaunty; urgency=low

  [ Robert Ancell ]
  * GTK frontend:
    - Workaround for radio button labels disappearing (LP: #353090).

  [ Colin Watson ]
  * KDE frontend:
    - Fix typo in installation_medium_mounted handler (LP: #354515).
  * Automatic update of included source packages: user-setup 1.23ubuntu17.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 08 Apr 2009 02:29:12 +0100

ubiquity (1.12.4) jaunty; urgency=low

  [ Colin Watson ]
  * Don't pass the debconf PURGE command through debconffilter, since we
    don't know the owner of the package calling it (LP: #354534).
  * Unset DEBCONF_REDIR in our apt-install shim so that starting up another
    debconf frontend will actually work, as needed when installing grub-pc.
    Also set APT_LISTCHANGES_FRONTEND=none just in case.
  * Install boot loader packages immediately rather than queueing them until
    later. Boot loader installers typically need them immediately.
  * Update translations from Launchpad.
  * Automatic update of included source packages: partman-ext3 56ubuntu2.

  [ Evan Dandrea ]
  * Add the missing UTC+5.5 time zone image.
  * Draw something resembling a slider, rather than a black box, for the
    slider on the partition bar.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Apr 2009 19:44:24 +0100

ubiquity (1.12.3) jaunty; urgency=low

  * Sync with netcfg 1.44: Define IPv6 ::1 address as "localhost" (thanks,
    Robb Topolski; LP: #301430).
  * Silently skip non-existent devices in /proc/swaps (LP: #290947).