@@ -10,6 +10,8 @@ ubiquity (1.12.6) UNRELEASED; urgency=low
     future.
   * Try a couple of different locations for NetworkManager's init script
     (LP: #356813).
+  * Sync with console-setup 1.28ubuntu8: treat the Kazakhstan layout (kz) as
+    non-Latin (LP: #356816).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 08 Apr 2009 14:41:13 +0100
 
